frontend/login/style.css
.style{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px;
    border: 4px solid #ccc;
    border-radius: 10px;
    background-color: var(--Back-color);
    width: 500px;
    position: absolute;
    top: 30%; 
    left: 30%; /
}
.chekbox{
    display: flex;
    justify-content: space-between;

}
.submit,.signup {
    padding: 10px 20px;
    background-color:var(--Basic);
    margin-left: 5px; 
    cursor: pointer;
    transition: 1s;
    border-radius: 20px;
}

.username_style,
.password_style {
    padding: 10px;
    font-size: 16px;  
    width: 250px; 
    color:white;

    
}
a{
    color:rgb(35, 17, 227);
}
a:visited{
    color:#FFFFFF;
}
.submit:hover,.signup:hover {
    background-color: royalblue; 
    border:none;
}
nav{
    display: flex;
    justify-content: space-around;
    background-color: var(--Basic);
    padding: 10px;
    border-radius: 10px;
    margin-top: 10px;
}
footer{
    display: flex;
    justify-content: space-around;
    background-color: var(--Basic);
    padding: 10px;
    border-radius: 10px;
    margin-top: 700px;
    
}
input{
    background-color: #333333;
}
.remember{
    color:#FFFFFF;
}

